@@ -1,3 +1,6 @@
+2017-05-08 (0.12.10)
+	COMMON: Fix FUNC call as pseudo class method
+
 2017-05-06 (0.12.10)
 	COMMON: SUB can now use RETURN statement
 	COMMON: Fix line number count when using multi-line strings
